--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>PRACTICE</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </nav>
+        <div></div>
+    </header>
+    <main></main>
+    <footer>&copy;2024</footer>
 </body>
 </html>
