--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PRACTICE</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <ol>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ol>
-        </nav>
-        <div></div>
+      <nav>
+        <ol>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ol>
+      </nav>
+      <div></div>
     </header>
     <main></main>
     <footer>&copy;2024</footer>
-</body>
+  </body>
 </html>
